python/sdk/network/azure-mgmt-network/tests/recordings/test_cli_mgmt_network_ip.pyTestMgmtNetworktest_network.json
{
  "Entries": [
    {
      "RequestUri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0/.well-known/openid-configuration",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-identity/1.15.0b1 Python/3.8.17 (Linux-5.15.0-1042-azure-x86_64-with-glibc2.2.5) VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_2500_0"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Access-Control-Allow-Methods": "GET, OPTIONS",
        "Access-Control-Allow-Origin": "*",
        "Cache-Control": "max-age=86400, private",
        "Content-Length": "1753",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 04 Sep 2023 03:12:51 GMT",
        "P3P": "CP=\u0022DSP CUR OTPi IND OTRi ONL FIN\u0022",
        "Set-Cookie": "[set-cookie;]",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-ests-server": "2.1.16209.3 - EUS ProdSlices",
        "x-ms-httpver": "1.1",
        "X-XSS-Protection": "0"
      },
      "ResponseBody": {
        "token_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/token",
        "token_endpoint_auth_methods_supported": [
          "client_secret_post",
          "private_key_jwt",
          "client_secret_basic"
        ],
        "jwks_uri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/discovery/v2.0/keys",
        "response_modes_supported": [
          "query",
          "fragment",
          "form_post"
        ],
        "subject_types_supported": [
          "pairwise"
        ],
        "id_token_signing_alg_values_supported": [
          "RS256"
        ],
        "response_types_supported": [
          "code",
          "id_token",
          "code id_token",
          "id_token token"
        ],
        "scopes_supported": [
          "openid",
          "profile",
          "email",
          "offline_access"
        ],
        "issuer": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0",
        "request_uri_parameter_supported": false,
        "userinfo_endpoint": "https://graph.microsoft.com/oidc/userinfo",
        "authorization_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/authorize",
        "device_authorization_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/devicecode",
        "http_logout_supported": true,
        "frontchannel_logout_supported": true,
        "end_session_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/logout",
        "claims_supported": [
          "sub",
          "iss",
          "cloud_instance_name",
          "cloud_instance_host_name",
          "cloud_graph_host_name",
          "msgraph_host",
          "aud",
          "exp",
          "iat",
          "auth_time",
          "acr",
          "nonce",
          "preferred_username",
          "name",
          "tid",
          "ver",
          "at_hash",
          "c_hash",
          "email"
        ],
        "kerberos_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/kerberos",
        "tenant_region_scope": "WW",
        "cloud_instance_name": "microsoftonline.com",
        "cloud_graph_host_name": "graph.windows.net",
        "msgraph_host": "graph.microsoft.com",
        "rbac_url": "https://pas.windows.net"
      }
    },
    {
      "RequestUri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/token",
      "RequestMethod": "POST",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "client-request-id": "10cea526-570a-420c-8fff-fba536e40784",
        "Connection": "keep-alive",
        "Content-Length": "193",
        "Content-Type": "application/x-www-form-urlencoded",
        "Cookie": "cookie;",
        "User-Agent": "azsdk-python-identity/1.15.0b1 Python/3.8.17 (Linux-5.15.0-1042-azure-x86_64-with-glibc2.2.5) VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_2500_0",
        "x-client-cpu": "x64",
        "x-client-current-telemetry": "4|730,2|",
        "x-client-last-telemetry": "4|0|||",
        "x-client-os": "linux",
        "x-client-sku": "MSAL.Python",
        "x-client-ver": "1.23.0",
        "x-ms-lib-capability": "retry-after, h429"
      },
      "RequestBody": "client_id=00000000-0000-0000-0000-000000000000\u0026grant_type=client_credentials\u0026client_info=1\u0026client_secret=00000000-0000-0000-0000-000000000000\u0026scope=https%3A%2F%2Fmanagement.azure.com%2F.default",
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-store, no-cache",
        "client-request-id": "10cea526-570a-420c-8fff-fba536e40784",
        "Content-Length": "114",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 04 Sep 2023 03:12:51 GMT",
        "Expires": "-1",
        "P3P": "CP=\u0022DSP CUR OTPi IND OTRi ONL FIN\u0022",
        "Pragma": "no-cache",
        "Set-Cookie": "[set-cookie;]",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-clitelem": "1,0,0,,",
        "x-ms-ests-server": "2.1.16209.3 - NCUS ProdSlices",
        "x-ms-httpver": "1.1",
        "X-XSS-Protection": "0"
      },
      "ResponseBody": {
        "token_type": "Bearer",
        "expires_in": 86399,
        "ext_expires_in": 86399,
        "refresh_in": 43199,
        "access_token": "access_token"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/ipGroups/myIpGroups?api-version=2023-05-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "140",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.1.0 Python/3.8.17 (Linux-5.15.0-1042-azure-x86_64-with-glibc2.2.5) VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_2500_0"
      },
      "RequestBody": {
        "location": "West US",
        "tags": {
          "key1": "value1"
        },
        "properties": {
          "ipAddresses": [
            "13.64.39.16/32",
            "40.74.146.80/31",
            "40.74.147.32/28"
          ]
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/nfvOperations/b75ca165-f549-45d0-a0df-d6cb3575e279?api-version=2023-05-01",
        "Cache-Control": "no-cache",
        "Content-Length": "540",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 04 Sep 2023 03:12:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "e7bb8144-c408-46d2-9c3a-394ee3b70b73",
        "x-ms-ratelimit-remaining-subscription-writes": "1195",
        "x-ms-routing-request-id": "CENTRALUS:20230904T031253Z:e7bb8144-c408-46d2-9c3a-394ee3b70b73"
      },
      "ResponseBody": {
        "properties": {
          "firewalls": [],
          "firewallPolicies": [],
          "ipAddresses": [
            "13.64.39.16/32",
            "40.74.146.80/31",
            "40.74.147.32/28"
          ],
          "provisioningState": "Updating"
        },
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/ipGroups/myIpGroups",
        "name": "myIpGroups",
        "type": "Microsoft.Network/IpGroups",
        "etag": "8664b47b-acca-46a0-aa14-4180ccdaf1ee",
        "location": "West US",
        "tags": {
          "key1": "value1"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/nfvOperations/b75ca165-f549-45d0-a0df-d6cb3575e279?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.1.0 Python/3.8.17 (Linux-5.15.0-1042-azure-x86_64-with-glibc2.2.5) VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_2500_0"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 04 Sep 2023 03:12:53 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "df7ee455-3c50-49c1-85af-c4271ddf9b59",
        "x-ms-ratelimit-remaining-subscription-reads": "11955",
        "x-ms-routing-request-id": "CENTRALUS:20230904T031253Z:df7ee455-3c50-49c1-85af-c4271ddf9b59"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/ipGroups/myIpGroups?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.1.0 Python/3.8.17 (Linux-5.15.0-1042-azure-x86_64-with-glibc2.2.5) VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_2500_0"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 04 Sep 2023 03:12:53 GMT",
        "ETag": "\u00228664b47b-acca-46a0-aa14-4180ccdaf1ee\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "486bc098-a30a-4829-bd32-75b75da20d75",
        "x-ms-ratelimit-remaining-subscription-reads": "11954",
        "x-ms-routing-request-id": "CENTRALUS:20230904T031253Z:486bc098-a30a-4829-bd32-75b75da20d75"
      },
      "ResponseBody": {
        "properties": {
          "firewalls": [],
          "firewallPolicies": [],
          "ipAddresses": [
            "13.64.39.16/32",
            "40.74.146.80/31",
            "40.74.147.32/28"
          ],
          "provisioningState": "Succeeded"
        },
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/ipGroups/myIpGroups",
        "name": "myIpGroups",
        "type": "Microsoft.Network/IpGroups",
        "etag": "8664b47b-acca-46a0-aa14-4180ccdaf1ee",
        "location": "West US",
        "tags": {
          "key1": "value1"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/ipGroups/myIpGroups?api-version=2023-05-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.1.0 Python/3.8.17 (Linux-5.15.0-1042-azure-x86_64-with-glibc2.2.5) VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_2500_0"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 04 Sep 2023 03:12:53 GMT",
        "ETag": "\u00228664b47b-acca-46a0-aa14-4180ccdaf1ee\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "be4efc55-5dea-4643-b800-cf579ffeb764",
        "x-ms-ratelimit-remaining-subscription-reads": "11953",
        "x-ms-routing-request-id": "CENTRALUS:20230904T031253Z:be4efc55-5dea-4643-b800-cf579ffeb764"
      },
      "ResponseBody": {
        "properties": {
          "firewalls": [],
          "firewallPolicies": [],
          "ipAddresses": [
            "13.64.39.16/32",
            "40.74.146.80/31",
            "40.74.147.32/28"
          ],
          "provisioningState": "Succeeded"
        },
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/ipGroups/myIpGroups",
        "name": "myIpGroups",
        "type": "Microsoft.Network/IpGroups",
        "etag": "8664b47b-acca-46a0-aa14-4180ccdaf1ee",
        "location": "West US",
        "tags": {
          "key1": "value1"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/ipGroups/myIpGroups?api-version=2023-05-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "0",
        "User-Agent": "azsdk-python-mgmt-network/25.1.0 Python/3.8.17 (Linux-5.15.0-1042-azure-x86_64-with-glibc2.2.5) VSTS_0fb41ef4-5012-48a9-bf39-4ee3de03ee35_build_2500_0"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Mon, 04 Sep 2023 03:12:54 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": "Microsoft-HTTPAPI/2.0",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "6cd7939f-bc35-4388-aac7-baedf6ec227f",
        "x-ms-ratelimit-remaining-subscription-deletes": "14996",
        "x-ms-routing-request-id": "CENTRALUS:20230904T031254Z:6cd7939f-bc35-4388-aac7-baedf6ec227f"
      },
      "ResponseBody": null
    }
  ],
  "Variables": {}
}
