python/sdk/network/azure-mgmt-network/tests/recordings/test_cli_mgmt_network_route_table.pyTestMgmtNetworktest_network.json
{
  "Entries": [
    {
      "RequestUri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0/.well-known/openid-configuration",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-identity/1.14.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Access-Control-Allow-Methods": "GET, OPTIONS",
        "Access-Control-Allow-Origin": "*",
        "Cache-Control": "max-age=86400, private",
        "Content-Length": "1753",
        "Content-Security-Policy-Report-Only": "script-src \u0027self\u0027 \u0027nonce-PoXLt7rkPi14zl2CgMPpaA\u0027 \u0027unsafe-eval\u0027 \u0027unsafe-inline\u0027 \u0027report-sample\u0027; object-src \u0027none\u0027; base-uri \u0027self\u0027; report-uri https://csp.microsoft.com/report/ESTS-UX-All",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:32 GMT",
        "P3P": "CP=\u0022DSP CUR OTPi IND OTRi ONL FIN\u0022",
        "Set-Cookie": "[set-cookie;]",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-ests-server": "2.1.16042.2 - KRSLR1 ProdSlices",
        "X-XSS-Protection": "0"
      },
      "ResponseBody": {
        "token_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/token",
        "token_endpoint_auth_methods_supported": [
          "client_secret_post",
          "private_key_jwt",
          "client_secret_basic"
        ],
        "jwks_uri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/discovery/v2.0/keys",
        "response_modes_supported": [
          "query",
          "fragment",
          "form_post"
        ],
        "subject_types_supported": [
          "pairwise"
        ],
        "id_token_signing_alg_values_supported": [
          "RS256"
        ],
        "response_types_supported": [
          "code",
          "id_token",
          "code id_token",
          "id_token token"
        ],
        "scopes_supported": [
          "openid",
          "profile",
          "email",
          "offline_access"
        ],
        "issuer": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/v2.0",
        "request_uri_parameter_supported": false,
        "userinfo_endpoint": "https://graph.microsoft.com/oidc/userinfo",
        "authorization_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/authorize",
        "device_authorization_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/devicecode",
        "http_logout_supported": true,
        "frontchannel_logout_supported": true,
        "end_session_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/logout",
        "claims_supported": [
          "sub",
          "iss",
          "cloud_instance_name",
          "cloud_instance_host_name",
          "cloud_graph_host_name",
          "msgraph_host",
          "aud",
          "exp",
          "iat",
          "auth_time",
          "acr",
          "nonce",
          "preferred_username",
          "name",
          "tid",
          "ver",
          "at_hash",
          "c_hash",
          "email"
        ],
        "kerberos_endpoint": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/kerberos",
        "tenant_region_scope": "WW",
        "cloud_instance_name": "microsoftonline.com",
        "cloud_graph_host_name": "graph.windows.net",
        "msgraph_host": "graph.microsoft.com",
        "rbac_url": "https://pas.windows.net"
      }
    },
    {
      "RequestUri": "https://login.microsoftonline.com/00000000-0000-0000-0000-000000000000/oauth2/v2.0/token",
      "RequestMethod": "POST",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "client-request-id": "d4815fa1-aea4-4096-a7fd-8f16f931902e",
        "Connection": "keep-alive",
        "Content-Length": "193",
        "Content-Type": "application/x-www-form-urlencoded",
        "Cookie": "cookie;",
        "User-Agent": "azsdk-python-identity/1.14.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)",
        "x-client-cpu": "x64",
        "x-client-current-telemetry": "4|730,2|",
        "x-client-last-telemetry": "4|0|||",
        "x-client-os": "win32",
        "x-client-sku": "MSAL.Python",
        "x-client-ver": "1.23.0",
        "x-ms-lib-capability": "retry-after, h429"
      },
      "RequestBody": "client_id=00000000-0000-0000-0000-000000000000\u0026grant_type=client_credentials\u0026client_info=1\u0026client_secret=00000000-0000-0000-0000-000000000000\u0026scope=https%3A%2F%2Fmanagement.azure.com%2F.default",
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-store, no-cache",
        "client-request-id": "d4815fa1-aea4-4096-a7fd-8f16f931902e",
        "Content-Length": "114",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:32 GMT",
        "Expires": "-1",
        "P3P": "CP=\u0022DSP CUR OTPi IND OTRi ONL FIN\u0022",
        "Pragma": "no-cache",
        "Set-Cookie": "[set-cookie;]",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-clitelem": "1,0,0,,",
        "x-ms-ests-server": "2.1.16042.2 - SEASLR1 ProdSlices",
        "X-XSS-Protection": "0"
      },
      "ResponseBody": {
        "token_type": "Bearer",
        "expires_in": 86399,
        "ext_expires_in": 86399,
        "refresh_in": 43199,
        "access_token": "access_token"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable?api-version=2023-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "22",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/35a4f7be-6241-4750-a23f-1bef85bf9e99?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "415",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:33 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "800a5782-07b4-4e41-ba8c-77c88b5f7bc8",
        "x-ms-correlation-request-id": "b07b5b36-c1f0-42b5-bc5a-c65446bbdbce",
        "x-ms-ratelimit-remaining-subscription-writes": "1183",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071334Z:b07b5b36-c1f0-42b5-bc5a-c65446bbdbce"
      },
      "ResponseBody": {
        "name": "myRouteTable",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable",
        "etag": "W/\u0022ee24d50b-596d-47a5-98be-8d35b23e0a5d\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "e4e5a3cf-d919-4246-8333-b184f5988d54",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/35a4f7be-6241-4750-a23f-1bef85bf9e99?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:33 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ebe64fe9-731b-4aa5-9fc0-f4574db0ccca",
        "x-ms-correlation-request-id": "7408e171-ef8c-4d41-aea0-2596d3094071",
        "x-ms-ratelimit-remaining-subscription-reads": "11935",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071334Z:7408e171-ef8c-4d41-aea0-2596d3094071"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:34 GMT",
        "ETag": "W/\u0022635abf3b-3729-4ea0-8743-9cc2abc2a347\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "958a38a5-8248-47ce-8a80-add0a93474b2",
        "x-ms-correlation-request-id": "4f26c1b2-8667-475c-87f3-0e836c35919c",
        "x-ms-ratelimit-remaining-subscription-reads": "11934",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071334Z:4f26c1b2-8667-475c-87f3-0e836c35919c"
      },
      "ResponseBody": {
        "name": "myRouteTable",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable",
        "etag": "W/\u0022635abf3b-3729-4ea0-8743-9cc2abc2a347\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "e4e5a3cf-d919-4246-8333-b184f5988d54",
          "disableBgpRoutePropagation": false,
          "routes": []
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute?api-version=2023-04-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "88",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "properties": {
          "addressPrefix": "10.0.3.0/24",
          "nextHopType": "VirtualNetworkGateway"
        }
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/a1fea4a8-d972-4d83-b27a-e9d47a49114d?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "402",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:34 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "0705e618-865c-4268-8385-ad4d7f6faf81",
        "x-ms-correlation-request-id": "e696e448-7fe0-4d97-85cb-034afb2ccf4a",
        "x-ms-ratelimit-remaining-subscription-writes": "1182",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071335Z:e696e448-7fe0-4d97-85cb-034afb2ccf4a"
      },
      "ResponseBody": {
        "name": "myRoute",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute",
        "etag": "W/\u0022dc3b485c-906a-40f5-a1ef-778a91f1731e\u0022",
        "properties": {
          "provisioningState": "Updating",
          "addressPrefix": "10.0.3.0/24",
          "nextHopType": "VirtualNetworkGateway",
          "hasBgpOverride": false
        },
        "type": "Microsoft.Network/routeTables/routes"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/a1fea4a8-d972-4d83-b27a-e9d47a49114d?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:35 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "ad741190-bd87-4fd6-94ee-c81a9589d64d",
        "x-ms-correlation-request-id": "01516428-7910-4518-b929-a6514e462e94",
        "x-ms-ratelimit-remaining-subscription-reads": "11933",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071335Z:01516428-7910-4518-b929-a6514e462e94"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:35 GMT",
        "ETag": "W/\u0022c44bf809-af66-4834-b06a-afb5882c8952\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5fe43118-9a86-4e89-b4a5-b544625f406f",
        "x-ms-correlation-request-id": "45db4e2d-aefc-4116-93cf-b201b6cd39f9",
        "x-ms-ratelimit-remaining-subscription-reads": "11932",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071336Z:45db4e2d-aefc-4116-93cf-b201b6cd39f9"
      },
      "ResponseBody": {
        "name": "myRoute",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute",
        "etag": "W/\u0022c44bf809-af66-4834-b06a-afb5882c8952\u0022",
        "properties": {
          "provisioningState": "Succeeded",
          "addressPrefix": "10.0.3.0/24",
          "nextHopType": "VirtualNetworkGateway",
          "hasBgpOverride": false
        },
        "type": "Microsoft.Network/routeTables/routes"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:36 GMT",
        "ETag": "W/\u0022c44bf809-af66-4834-b06a-afb5882c8952\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "adf149bd-3280-4db3-81b8-f0d32e4b69b2",
        "x-ms-correlation-request-id": "ca7d02f2-d459-4c95-b341-9a69d7e3c8cd",
        "x-ms-ratelimit-remaining-subscription-reads": "11931",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071336Z:ca7d02f2-d459-4c95-b341-9a69d7e3c8cd"
      },
      "ResponseBody": {
        "name": "myRoute",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute",
        "etag": "W/\u0022c44bf809-af66-4834-b06a-afb5882c8952\u0022",
        "properties": {
          "provisioningState": "Succeeded",
          "addressPrefix": "10.0.3.0/24",
          "nextHopType": "VirtualNetworkGateway",
          "hasBgpOverride": false
        },
        "type": "Microsoft.Network/routeTables/routes"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:36 GMT",
        "ETag": "W/\u0022c44bf809-af66-4834-b06a-afb5882c8952\u0022",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "5512a052-c7b1-472a-97bc-505e3051ac3c",
        "x-ms-correlation-request-id": "b5ad40cd-caba-43b2-a3c5-f1c2733ee2a0",
        "x-ms-ratelimit-remaining-subscription-reads": "11930",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071337Z:b5ad40cd-caba-43b2-a3c5-f1c2733ee2a0"
      },
      "ResponseBody": {
        "name": "myRouteTable",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable",
        "etag": "W/\u0022c44bf809-af66-4834-b06a-afb5882c8952\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "e4e5a3cf-d919-4246-8333-b184f5988d54",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "myRoute",
              "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute",
              "etag": "W/\u0022c44bf809-af66-4834-b06a-afb5882c8952\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/24",
                "nextHopType": "VirtualNetworkGateway",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable?api-version=2023-04-01",
      "RequestMethod": "PATCH",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "46",
        "Content-Type": "application/json",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": {
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        }
      },
      "StatusCode": 200,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:38 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "674bb9a3-30b4-4c35-a415-c1f080e7742e",
        "x-ms-correlation-request-id": "1eca959c-2f9d-4b99-9395-b6607ba5381a",
        "x-ms-ratelimit-remaining-subscription-writes": "1181",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071338Z:1eca959c-2f9d-4b99-9395-b6607ba5381a"
      },
      "ResponseBody": {
        "name": "myRouteTable",
        "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable",
        "etag": "W/\u0022b28e0d0b-0455-490d-9568-680d73d1e440\u0022",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "tags": {
          "tag1": "value1",
          "tag2": "value2"
        },
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "e4e5a3cf-d919-4246-8333-b184f5988d54",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "myRoute",
              "id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute",
              "etag": "W/\u0022b28e0d0b-0455-490d-9568-680d73d1e440\u0022",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.3.0/24",
                "nextHopType": "VirtualNetworkGateway",
                "hasBgpOverride": false
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable/routes/myRoute?api-version=2023-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "0",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/579b1ae0-c0e8-4bf7-a5c9-b745a41240cc?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Mon, 07 Aug 2023 07:13:38 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/579b1ae0-c0e8-4bf7-a5c9-b745a41240cc?api-version=2023-04-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8eb591f5-aff5-4363-a198-ecf9e596fba2",
        "x-ms-correlation-request-id": "9245175e-c46e-4ba4-9eb0-dc91737e5382",
        "x-ms-ratelimit-remaining-subscription-deletes": "14991",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071339Z:9245175e-c46e-4ba4-9eb0-dc91737e5382"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/579b1ae0-c0e8-4bf7-a5c9-b745a41240cc?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:38 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "60c736a0-53fd-44ec-a7da-01bfcfc28e86",
        "x-ms-correlation-request-id": "3208e3a8-ddf5-4827-925c-caf80a9fc2c4",
        "x-ms-ratelimit-remaining-subscription-reads": "11929",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071339Z:3208e3a8-ddf5-4827-925c-caf80a9fc2c4"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/579b1ae0-c0e8-4bf7-a5c9-b745a41240cc?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 204,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/579b1ae0-c0e8-4bf7-a5c9-b745a41240cc?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:39 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/579b1ae0-c0e8-4bf7-a5c9-b745a41240cc?api-version=2023-04-01",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "8eb591f5-aff5-4363-a198-ecf9e596fba2",
        "x-ms-correlation-request-id": "9245175e-c46e-4ba4-9eb0-dc91737e5382",
        "x-ms-ratelimit-remaining-subscription-reads": "11928",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071340Z:8d2436ed-011c-40a8-9d3e-1d21b2b61d15"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rgname/providers/Microsoft.Network/routeTables/myRouteTable?api-version=2023-04-01",
      "RequestMethod": "DELETE",
      "RequestHeaders": {
        "Accept": "application/json",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "Content-Length": "0",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 202,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/b6cafa7b-aa98-4083-8ea5-a225923b7152?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Length": "0",
        "Date": "Mon, 07 Aug 2023 07:13:40 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/b6cafa7b-aa98-4083-8ea5-a225923b7152?api-version=2023-04-01",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "53a6bba5-70b8-4ab8-86bc-0b626c5c47a2",
        "x-ms-correlation-request-id": "acab3f51-0a73-43a9-9623-12581275d0a5",
        "x-ms-ratelimit-remaining-subscription-deletes": "14990",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071340Z:acab3f51-0a73-43a9-9623-12581275d0a5"
      },
      "ResponseBody": null
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/b6cafa7b-aa98-4083-8ea5-a225923b7152?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Encoding": "gzip",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:40 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "Transfer-Encoding": "chunked",
        "Vary": "Accept-Encoding",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "f4fcc386-9ddf-43f6-97e3-ff99d2a503f9",
        "x-ms-correlation-request-id": "48227377-d292-4c12-a67f-f6122b11dc4a",
        "x-ms-ratelimit-remaining-subscription-reads": "11927",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071341Z:48227377-d292-4c12-a67f-f6122b11dc4a"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/b6cafa7b-aa98-4083-8ea5-a225923b7152?api-version=2023-04-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "*/*",
        "Accept-Encoding": "gzip, deflate",
        "Connection": "keep-alive",
        "User-Agent": "azsdk-python-mgmt-network/25.0.0 Python/3.10.11 (Windows-10-10.0.22621-SP0)"
      },
      "RequestBody": null,
      "StatusCode": 204,
      "ResponseHeaders": {
        "Azure-AsyncNotification": "Enabled",
        "Azure-AsyncOperation": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/b6cafa7b-aa98-4083-8ea5-a225923b7152?api-version=2023-04-01",
        "Cache-Control": "no-cache",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Mon, 07 Aug 2023 07:13:40 GMT",
        "Expires": "-1",
        "Location": "https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operationResults/b6cafa7b-aa98-4083-8ea5-a225923b7152?api-version=2023-04-01",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "53a6bba5-70b8-4ab8-86bc-0b626c5c47a2",
        "x-ms-correlation-request-id": "acab3f51-0a73-43a9-9623-12581275d0a5",
        "x-ms-ratelimit-remaining-subscription-reads": "11926",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230807T071341Z:5ae3f814-1af9-40a5-a663-0c82e785f75f"
      },
      "ResponseBody": null
    }
  ],
  "Variables": {}
}
